PostGIS 1.1.5-CVS

	- Java:
		- Removed obsolete synchronization from Jts code.

PostGIS 1.1.4

	- Fixed support for PostgreSQL 8.2
	- Fixed bug in collect() function discarding SRID of
	  input
	- Added SRID match check in MakeBox2d and MakeBox3d
	- Fixed regress tests to pass with GEOS-3.0.0
	- Improved pgsql2shp run concurrency.
	- Java:
		- reworked JTS support to reflect new upstream
		  JTS developers' attitude to SRID handling.
		  Simplifies code and drops build depend on GNU trove.
		- Added EJB2 support generously donated by the
		  "Geodetix s.r.l. Company" http://www.geodetix.it/
		- Added EJB3 tutorial / examples donated by
		  Norman Barker <nbarker@ittvis.com>
		- Reorganized java directory layout a little.

PostGIS 1.1.3
2006/06/30

	- NEW Long Transactions support.
	- Can run the regress tests with 'make check' now.
	- New regress test support for loader/dumper.
	- BUGFIX in pgsql2shp successful return code.
	- BUGFIX in shp2pgsql handling of MultiLine WKT.
	- BUGFIX in affine() failing to update bounding box.
	- WKT parser: forbidden construction of multigeometries with
	  EMPTY elements (still supported for GEOMETRYCOLLECTION).
	- Added --with-proj-libdir and --with-geos-libdir configure
	  switches.
	- JDBC:
	    - Improved regression tests: MultiPoint and scientific ordinates
	    - Fixed some minor bugs in jdbc code
	    - Added proper accessor functions for all fields in preparation of
	      making those fields private later
	- Support for build Tru64 build.
	- Use Jade for generating documentation.
	- NEW DumpRings() function.
	- BUGFIX in distance(poly,poly) giving wrong results.
	- NEW AsHEXEWKB(geom, XDR|NDR) function.
	- Don't link pgsql2shp to more libs then required.
	- Initial support for PostgreSQL 8.2.

PostGIS 1.1.2
2006/03/30

	- Regress tests can now be run *before* postgis intallation
	- BUGFIX in SnapToGrid() computation of output bounding box
	- More portable ./configure script